--- a/style.css
+++ b/style.css
@@ -65,3 +65,23 @@ nav .top:hover ul {
   background-color: blue;
   width: 100%;
 }
+nav .about:hover li:hover {
+  display: block;
+  background-color: white;
+  color: black;
+  width: 100%;
+}
+
+nav .services:hover li:hover {
+  display: block;
+  background-color: white;
+  color: black;
+  width: 100%;
+}
+
+nav .top:hover li:hover {
+  display: block;
+  background-color: white;
+  color: black;
+  width: 100%;
+}
